# arxiv-nlu-playground

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: config.yaml
src/config/data/: experiments.yaml  exploration.yaml  paper_cleanup.yaml
src/config/metrics/: text_classification_metrics.yaml
src/config/models/: text_classification.yaml  text_classification_sklearn.yaml
src/config/save/: main_save.yaml
src/config/trainer/: text_classification_trainer.yaml
src/data/: corpus_analyzer.py  corpus_reader.py  experiment_corpus_readers.py  paper_preprocessor.py
src/main_operation_modes/: experiments.py  exploration.py  generate_cleaned_papers.py  paper_cleanup.py  static_text_analysis.py
src/metrics/: text_classification_metrics.py
src/models/: ml_model_base.py  sklearn_text_classifier.py
src/tests/: test_corpus_analyzer.py  test_corpus_reader.py  test_experiment_readers.py  test_metrics.py  test_sklearn_models.py
src/trainer/: trainer.py
src/utils/: dataset_utils.py  serialization_utils.py
