[tool.poetry]
name = "arxiv-nlu-playground"
version = "0.1.0"
description = "Developing NLU models that can interpret the contents of research papers."
authors = ["Armand Silviu Gurgu <armandgurgu23@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.3"
pyspark = "^3.2.0"
Hydra = "^2.5"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
